tests/specs/check/css_import/not_exists.out
Check [WILDLINE]exists.ts
error: TS2307 [ERROR]: Cannot find module 'file:///[WILDLINE]/not_exists.css'.
    at file:///[WILDLINE]/not_exists.ts:1:8
